added coding page, edited menus

--- a/about.html
+++ b/about.html
@@ -20,14 +20,7 @@
         <div id="topBar"></div>
     </header>
 
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Art</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="coding.html">Code</a>
-        </li>
-      </ul>
+<div>about</div>
 
     <footer>
         <div id="bottomBar"></div>
