--- a/coding.html
+++ b/coding.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8" />
@@ -22,10 +22,10 @@
 
     <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Art</a>
+          <a class="nav-link" href="index.html">Art</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="coding.html">Code</a>
+          <a class="nav-link active" aria-current="page" href="#">Code</a>
         </li>
       </ul>
 
