added dark mode; added split directories for art and code

--- a/code/about.html
+++ b/code/about.html
@@ -15,19 +15,12 @@
 
 </head>
 
-<body class="fade-in">
+<body>
     <header>
         <div id="topBar"></div>
     </header>
 
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Art</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Code</a>
-        </li>
-      </ul>
+<div>about</div>
 
     <footer>
         <div id="bottomBar"></div>
