--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="fade-in">
     <header>
-        <div id="topBar"></div>
+        <div id="artTopBar"></div>
     </header>
 
     <ul class="nav nav-tabs">
