added p5.js, renamed pages

--- a/headers.html
+++ b/headers.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary" id="artheadbar">
+<nav class="navbar navbar-expand-lg bg-body-tertiary" id="lightmodeheadbar">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">ART</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -31,7 +31,7 @@
   </div>
 </nav>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary" id="codeheadbar">
+<nav class="navbar navbar-expand-lg bg-body-tertiary" id="darkmodeheadbar">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">CODE</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
