--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
 <body class="fade-in">
     <header>
-        <div id="artTopBar"></div>
+        <div id="lightModeTopBar"></div>
     </header>
 
     <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Art</a>
+          <a class="nav-link active" aria-current="page" href="#">Interaction</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="coding.html">Code</a>
+          <a class="nav-link" href="art.html">Illustration</a>
         </li>
       </ul>
 
@@ -40,7 +40,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <!--My JS file-->
+    <!--p5.JS-->
+    <script src="scripts/p5.js"></script>
+        <!--My JS file-->
     <script src="scripts/script.js"></script>
 </body>
 
