interactive index.html

--- a/index.html
+++ b/index.html
@@ -15,23 +15,9 @@
 
 </head>
 
-<body class="fade-in">
-    <header>
-        <div id="lightModeTopBar"></div>
-    </header>
-
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Interaction</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="art.html">Illustration</a>
-        </li>
-      </ul>
-
-    <footer>
-        <div id="bottomBar"></div>
-    </footer>
+<body>
+    <!-- import the webpage's javascript file -->
+     <script src="scripts/landing-animation.js"></script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-3.7.1.js"
@@ -42,8 +28,8 @@
         crossorigin="anonymous"></script>
     <!--p5.JS-->
     <script src="scripts/p5.js"></script>
-        <!--My JS file-->
-    <script src="scripts/script.js"></script>
+    <!--My JS file-->
+    <script src="scripts/script.js" defer></script>
 </body>
 
 </html>
