--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <div id="lightModeTopBar"></div>
+        <div id="topBar"></div>
     </header>
 
 <div>about</div>
