update homepage formatting

--- a/code.html
+++ b/code.html
@@ -22,10 +22,10 @@
 
     <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="code.html">Interaction</a>
+          <a class="nav-link active" aria-current="page" href="code.html">Interaction</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="art.html">Illustration</a>
+          <a class="nav-link" href="art.html">Illustration</a>
         </li>
       </ul>
 
