--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
@@ -25,7 +25,7 @@
             <a class="p-1 rounded" href="#resume-item-1">Education</a>
             <a class="p-1 rounded" href="#resume-item-2">Honors and Awards</a>
             <a class="p-1 rounded" href="#resume-item-3">Employment</a>
-            <a class="p-1 rounded" href="#resume-item-4">Volunteering, Projects and Interests</a>
+            <a class="p-1 rounded" href="#resume-item-4">Volunteering, Projects<br>and Interests</a>
             <a class="p-1 rounded" href="#resume-item-5">Skills</a>
           </div>
         </div>
