--- a/headers.html
+++ b/headers.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg" id="headbar" style="background-color: #fde3e3;">
+<nav class="navbar sticky-top navbar-expand-lg" id="headbar" style="background-color: #fde3e3;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">ART</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
