--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,7 @@
     <header>
         <div id="topBar"></div>
     </header>
+    <main>
     <div class="row">
         <div class="col-4">
           <div id="simple-list-example" class="d-flex flex-column gap-2 simple-list-example-scrollspy text-center">
@@ -60,7 +61,7 @@
           </div>
         </div>
       </div>
-
+    </main>
     <footer>
         <div id="bottomBar"></div>
     </footer>
