--- a/resume.html
+++ b/resume.html
@@ -34,20 +34,19 @@
           <div data-bs-spy="scroll" data-bs-target="#simple-list-example" data-bs-offset="0" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
             <h4 id="resume-item-1">Education</h4>
             <div class="flex-container">
-                <div class="flex-one-third">Current</div>
-                <div class="flex-two-thirds"><b>MSc Health Data Science</b>
+                <div class="flex-one-quarter">Current</div>
+                <div class="flex-three-quarters"><b>MSc Health Data Science</b>
                     <br><i>University of New South Wales, Australia</i>
                 <br>Expected graduation in September 2024
             </div>
             </div>
             <div class="flex-container">
-                <div class="flex-one-third">2018-2022<br>GPA: 3.99</div>
-                <div class="flex-two-thirds"><b>BA/BFA Dual-Degree Program</b>
+                <div class="flex-one-quarter">2018-2022<br>GPA: 3.99</div>
+                <div class="flex-three-quarters"><b>BA/BFA Dual-Degree Program</b>
                     <br><i>The New School, New York</i>
                 <br>BFA Illustration, Parsons School of Design (with honors and special recognition) (3.99 GPA)
                 <br>BA Psychology, Eugene Lang College (with honors) (4.00 GPA)
                 <br>Minor in Creative Coding (completed December 2021)
-                
             </div>
             </div>
             <h4 id="resume-item-2">Honors and Awards</h4>
