--- a/about.html
+++ b/about.html
@@ -20,7 +20,9 @@
         <div id="topBar"></div>
     </header>
 
+    <main>
 <div>about</div>
+</main>
 
     <footer>
         <div id="bottomBar"></div>
