--- a/art.html
+++ b/art.html
@@ -20,6 +20,7 @@
         <div id="topBar"></div>
     </header>
 
+    <main>
     <ul class="nav nav-tabs">
         <li class="nav-item">
           <a class="nav-link" href="code.html">Interaction</a>
@@ -32,6 +33,7 @@
     <footer>
         <div id="bottomBar"></div>
     </footer>
+</main>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-3.7.1.js"
