--- a/code.html
+++ b/code.html
@@ -20,7 +20,8 @@
         <div id="topBar"></div>
     </header>
 
-    <ul class="nav nav-tabs">
+    <main>
+    <ul class="nav nav-tabs justify-content-center">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="code.html">Interaction</a>
         </li>
@@ -32,6 +33,7 @@
     <footer>
         <div id="bottomBar"></div>
     </footer>
+</main>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-3.7.1.js"
