--- a/resume.html
+++ b/resume.html
@@ -20,46 +20,76 @@
         <div id="topBar"></div>
     </header>
     <main>
-    <div class="row">
-        <div class="col-4">
-          <div id="simple-list-example" class="d-flex flex-column gap-2 simple-list-example-scrollspy text-center">
-            <a class="p-1 rounded" href="#resume-item-1">Education</a>
-            <a class="p-1 rounded" href="#resume-item-2">Honors and Awards</a>
-            <a class="p-1 rounded" href="#resume-item-3">Employment</a>
-            <a class="p-1 rounded" href="#resume-item-4">Volunteering, Projects<br>and Interests</a>
-            <a class="p-1 rounded" href="#resume-item-5">Skills</a>
-          </div>
+        <div class="row">
+            <div class="col-4">
+                <div id="simple-list-example"
+                    class="d-flex flex-column gap-2 simple-list-example-scrollspy text-center">
+                    <a class="p-1 rounded" href="#resume-item-1">Education</a>
+                    <a class="p-1 rounded" href="#resume-item-2">Honors and Awards</a>
+                    <a class="p-1 rounded" href="#resume-item-3">Employment</a>
+                    <a class="p-1 rounded" href="#resume-item-4">Volunteering, Projects<br>and Interests</a>
+                    <a class="p-1 rounded" href="#resume-item-5">Skills</a>
+                </div>
+            </div>
+            <div class="col-8">
+                <div data-bs-spy="scroll" data-bs-target="#simple-list-example" data-bs-offset="0"
+                    data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
+                    <h4 id="resume-item-1">Education</h4>
+                    <div class="flex-container">
+                        <div class="flex-one-quarter">Current</div>
+                        <div class="flex-three-quarters"><b>MSc Health Data Science</b>
+                            <br><i>University of New South Wales</i>
+                            <br>Expected graduation in September 2024
+                        </div>
+                    </div>
+                    <div class="flex-container">
+                        <div class="flex-one-quarter">2018-2022<br>GPA: 3.99</div>
+                        <div class="flex-three-quarters"><b>BA/BFA Dual-Degree Program</b>
+                            <br><i>The New School</i>
+                            <br>BFA Illustration, Parsons School of Design (with honors and special recognition) (3.99
+                            GPA)
+                            <br>BA Psychology, Eugene Lang College (with honors) (4.00 GPA)
+                            <br>Minor in Creative Coding (completed December 2021)
+                        </div>
+                    </div>
+                    <h4 id="resume-item-2">Honors and Awards</h4>
+                    <div class="flex-container">
+                        <div class="flex-one-quarter">2018-2022</div>
+                        <div class="flex-three-quarters"><b>Dean’s BFA Scholarship</b>
+                            <br><i>The New School</i>
+                            <br>Four-year tuition scholarship.
+                        </div>
+                    </div>
+                    <div class="flex-container">
+                        <div class="flex-one-quarter">2018-2022</div>
+                        <div class="flex-three-quarters"><b>Dean’s List</b>
+                            <br><i>The New School</i>
+                            <br>Awarded each semester for scoring a GPA of 3.7 or higher.
+                        </div>
+                    </div>
+                    <div class="flex-container">
+                        <div class="flex-one-quarter">2018</div>
+                        <div class="flex-three-quarters"><b>International Baccalaureate Diploma</b>
+                            <br><i>Canadian International School of Hong Kong</i>
+                            <br>Score: 38
+                        </div>
+                    </div>
+                    <div class="flex-container">
+                        <div class="flex-one-quarter">2018</div>
+                        <div class="flex-three-quarters"><b>Ontario Secondary School Diploma</b>
+                            <br><i>Canadian International School of Hong Kong</i>
+                            <br>Score: 93%
+                        </div>
+                    </div>
+                    <h4 id="resume-item-3">Employment</h4>
+                    <p>...</p>
+                    <h4 id="resume-item-4">Volunteering, Projects and Interests</h4>
+                    <p>...</p>
+                    <h4 id="resume-item-5">Skills</h4>
+                    <p>...</p>
+                </div>
+            </div>
         </div>
-        <div class="col-8">
-          <div data-bs-spy="scroll" data-bs-target="#simple-list-example" data-bs-offset="0" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
-            <h4 id="resume-item-1">Education</h4>
-            <div class="flex-container">
-                <div class="flex-one-quarter">Current</div>
-                <div class="flex-three-quarters"><b>MSc Health Data Science</b>
-                    <br><i>University of New South Wales, Australia</i>
-                <br>Expected graduation in September 2024
-            </div>
-            </div>
-            <div class="flex-container">
-                <div class="flex-one-quarter">2018-2022<br>GPA: 3.99</div>
-                <div class="flex-three-quarters"><b>BA/BFA Dual-Degree Program</b>
-                    <br><i>The New School, New York</i>
-                <br>BFA Illustration, Parsons School of Design (with honors and special recognition) (3.99 GPA)
-                <br>BA Psychology, Eugene Lang College (with honors) (4.00 GPA)
-                <br>Minor in Creative Coding (completed December 2021)
-            </div>
-            </div>
-            <h4 id="resume-item-2">Honors and Awards</h4>
-            <p>...</p>
-            <h4 id="resume-item-3">Employment</h4>
-            <p>...</p>
-            <h4 id="resume-item-4">Volunteering, Projects and Interests</h4>
-            <p>...</p>
-            <h4 id="resume-item-5">Skills</h4>
-            <p>...</p>
-          </div>
-        </div>
-      </div>
     </main>
     <footer>
         <div id="bottomBar"></div>
