--- a/resume.html
+++ b/resume.html
@@ -10,9 +10,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!--My CSS file-->
     <link rel="stylesheet" href="styles.css">
-    <title>title</title>
-
-
+    <title>Curriculum Vitae</title>
 </head>
 
 <body>
