--- a/resume.html
+++ b/resume.html
@@ -22,17 +22,17 @@
   <div class="col-4">
     <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
       <nav class="nav nav-pills flex-column">
-                    <a class="p-1 rounded" href="#resume-item-1">Education</a>
-                    <a class="p-1 rounded" href="#resume-item-2">Honors and Awards</a>
-                    <a class="p-1 rounded" href="#resume-item-3">Employment</a>
-                    <a class="p-1 rounded" href="#resume-item-4">Volunteering, Projects<br>and Interests</a>
-                    <a class="p-1 rounded" href="#resume-item-5">Skills</a>
+                    <a class="nav-link ms-3 my-1" href="#resume-item-1">Education</a>
+                    <a class="nav-link ms-3 my-1" href="#resume-item-2">Honors and Awards</a>
+                    <a class="nav-link ms-3 my-1" href="#resume-item-3">Employment</a>
+                    <a class="nav-link ms-3 my-1" href="#resume-item-4">Volunteering, Projects<br>and Interests</a>
+                    <a class="nav-link ms-3 my-1" href="#resume-item-5">Skills</a>
                 </nav>
     </nav>
   </div>
             <div class="col-8">
-                <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-offset="0"
-                    data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
+                <div data-bs-spy="scroll" data-bs-target="#navbar-example3"
+                    data-bs-smooth-scroll="true" class="scrollspy-example-2 tabindex="0">
                     <h4 id="resume-item-1">Education</h4>
                     <div class="flex-container">
                         <div class="flex-one-quarter">Current</div>
