--- a/art.html
+++ b/art.html
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-    <ul class="nav nav-tabs justify-content-center">
+    <ul class="nav nav-underline justify-content-center">
         <li class="nav-item">
           <a class="nav-link" href="code.html">Interaction</a>
         </li>
