--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
     <main>
         <div class="row">
   <div class="col-4">
-    <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
+    <nav id="navbar-example3" class="sticky-top h-100 flex-column align-items-stretch pe-4 border-end">
       <nav class="nav nav-pills flex-column">
                     <a class="nav-link ms-3 my-1" href="#resume-item-1">Education</a>
                     <a class="nav-link ms-3 my-1" href="#resume-item-2">Honors and Awards</a>
