--- a/resume.html
+++ b/resume.html
@@ -20,8 +20,8 @@
     <main>
         <div class="row">
   <div class="col-4">
-    <nav id="navbar-example3" class="sticky-top h-100 flex-column align-items-stretch pe-4 border-end">
-      <nav class="nav nav-pills flex-column">
+    <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
+      <nav class="nav nav-pills flex-column sticky-top">
                     <a class="nav-link ms-3 my-1" href="#resume-item-1">Education</a>
                     <a class="nav-link ms-3 my-1" href="#resume-item-2">Honors and Awards</a>
                     <a class="nav-link ms-3 my-1" href="#resume-item-3">Employment</a>
