--- a/resume.html
+++ b/resume.html
@@ -18,8 +18,8 @@
         <div id="topBar"></div>
     </header>
     <main>
-        <div class="row sticky-top">
-  <div class="col-4">
+        <div class="row">
+  <div class="sticky-top col-4">
     <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
       <nav class="nav nav-pills flex-column">
                     <a class="nav-link ms-3 my-1" href="#resume-item-1">Education</a>
