--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
                     <a class="nav-link ms-3 my-1" href="#resume-item-5">Skills</a>
                 </nav>
     </nav>
-  </div>
+  </div></div>
             <div class="col-8">
                 <div data-bs-spy="scroll" data-bs-target="#navbar-example3"
                     data-bs-smooth-scroll="true" class="scrollspy-example-2 tabindex="0">
