--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
         <div id="topBar"></div>
     </header>
     <main>
-        <div class="row">
+        <div class="sticky-top  row">
   <div class="sticky-top col-4">
     <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
       <nav class="nav nav-pills flex-column">
