--- a/resume.html
+++ b/resume.html
@@ -18,77 +18,81 @@
         <div id="topBar"></div>
     </header>
     <main>
-        <div class="sticky-top  row">
-  <div class="sticky-top col-4">
-    <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
-      <nav class="nav nav-pills flex-column">
-                    <a class="nav-link ms-3 my-1" href="#resume-item-1">Education</a>
-                    <a class="nav-link ms-3 my-1" href="#resume-item-2">Honors and Awards</a>
-                    <a class="nav-link ms-3 my-1" href="#resume-item-3">Employment</a>
-                    <a class="nav-link ms-3 my-1" href="#resume-item-4">Volunteering, Projects<br>and Interests</a>
-                    <a class="nav-link ms-3 my-1" href="#resume-item-5">Skills</a>
-                </nav>
-    </nav>
-  </div></div>
-            <div class="col-8">
-                <div data-bs-spy="scroll" data-bs-target="#navbar-example3"
-                    data-bs-smooth-scroll="true" class="scrollspy-example-2 tabindex="0">
-                    <h4 id="resume-item-1">Education</h4>
-                    <div class="flex-container">
-                        <div class="flex-one-quarter">Current</div>
-                        <div class="flex-three-quarters"><b>MSc Health Data Science</b>
-                            <br><i>University of New South Wales</i>
-                            <br>Expected graduation in September 2024
+        
+            <div class="row">
+                <div class="col-4">
+                    <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
+                        <nav class="sticky-top nav nav-pills flex-column">
+                            <a class="nav-link ms-3 my-1" href="#resume-item-1">Education</a>
+                            <a class="nav-link ms-3 my-1" href="#resume-item-2">Honors and Awards</a>
+                            <a class="nav-link ms-3 my-1" href="#resume-item-3">Employment</a>
+                            <a class="nav-link ms-3 my-1" href="#resume-item-4">Volunteering, Projects<br>and
+                                Interests</a>
+                            <a class="nav-link ms-3 my-1" href="#resume-item-5">Skills</a>
+                        </nav>
+                    </nav>
+                </div>
+                <div class="col-8">
+                    <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true"
+                        class="scrollspy-example-2" tabindex="0">
+                        <h4 id="resume-item-1">Education</h4>
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">Current</div>
+                            <div class="flex-three-quarters"><b>MSc Health Data Science</b>
+                                <br><i>University of New South Wales</i>
+                                <br>Expected graduation in September 2024
+                            </div>
                         </div>
-                    </div>
-                    <div class="flex-container">
-                        <div class="flex-one-quarter">2018-2022<br>GPA: 3.99</div>
-                        <div class="flex-three-quarters"><b>BA/BFA Dual-Degree Program</b>
-                            <br><i>The New School</i>
-                            <br>BFA Illustration, Parsons School of Design (with honors and special recognition) (3.99
-                            GPA)
-                            <br>BA Psychology, Eugene Lang College (with honors) (4.00 GPA)
-                            <br>Minor in Creative Coding (completed December 2021)
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2018-2022<br>GPA: 3.99</div>
+                            <div class="flex-three-quarters"><b>BA/BFA Dual-Degree Program</b>
+                                <br><i>The New School</i>
+                                <br>BFA Illustration, Parsons School of Design (with honors and special recognition)
+                                (3.99
+                                GPA)
+                                <br>BA Psychology, Eugene Lang College (with honors) (4.00 GPA)
+                                <br>Minor in Creative Coding (completed December 2021)
+                            </div>
                         </div>
-                    </div>
-                    <h4 id="resume-item-2">Honors and Awards</h4>
-                    <div class="flex-container">
-                        <div class="flex-one-quarter">2018-2022</div>
-                        <div class="flex-three-quarters"><b>Dean’s BFA Scholarship</b>
-                            <br><i>The New School</i>
-                            <br>Four-year tuition scholarship.
+                        <h4 id="resume-item-2">Honors and Awards</h4>
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2018-2022</div>
+                            <div class="flex-three-quarters"><b>Dean’s BFA Scholarship</b>
+                                <br><i>The New School</i>
+                                <br>Four-year tuition scholarship.
+                            </div>
                         </div>
-                    </div>
-                    <div class="flex-container">
-                        <div class="flex-one-quarter">2018-2022</div>
-                        <div class="flex-three-quarters"><b>Dean’s List</b>
-                            <br><i>The New School</i>
-                            <br>Awarded each semester for scoring a GPA of 3.7 or higher.
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2018-2022</div>
+                            <div class="flex-three-quarters"><b>Dean’s List</b>
+                                <br><i>The New School</i>
+                                <br>Awarded each semester for scoring a GPA of 3.7 or higher.
+                            </div>
                         </div>
-                    </div>
-                    <div class="flex-container">
-                        <div class="flex-one-quarter">2018</div>
-                        <div class="flex-three-quarters"><b>International Baccalaureate Diploma</b>
-                            <br><i>Canadian International School of Hong Kong</i>
-                            <br>Score: 38
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2018</div>
+                            <div class="flex-three-quarters"><b>International Baccalaureate Diploma</b>
+                                <br><i>Canadian International School of Hong Kong</i>
+                                <br>Score: 38
+                            </div>
                         </div>
-                    </div>
-                    <div class="flex-container">
-                        <div class="flex-one-quarter">2018</div>
-                        <div class="flex-three-quarters"><b>Ontario Secondary School Diploma</b>
-                            <br><i>Canadian International School of Hong Kong</i>
-                            <br>Score: 93%
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2018</div>
+                            <div class="flex-three-quarters"><b>Ontario Secondary School Diploma</b>
+                                <br><i>Canadian International School of Hong Kong</i>
+                                <br>Score: 93%
+                            </div>
                         </div>
+                        <h4 id="resume-item-3">Employment</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <h4 id="resume-item-4">Volunteering, Projects and Interests</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <h4 id="resume-item-5">Skills</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                     </div>
-                    <h4 id="resume-item-3">Employment</h4>
-                    <p>...</p>
-                    <h4 id="resume-item-4">Volunteering, Projects and Interests</h4>
-                    <p>...</p>
-                    <h4 id="resume-item-5">Skills</h4>
-                    <p>...</p>
                 </div>
             </div>
-        </div>
+        
     </main>
     <footer>
         <div id="bottomBar"></div>
