--- a/resume.html
+++ b/resume.html
@@ -23,6 +23,8 @@
                 <div class="col-4">
                     <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
                         <nav class="sticky-top nav nav-pills flex-column">
+                            <h5 class="d-inline-flex mb-3 px-2 py-1 justify-content-center text-black-50"><b>SECTIONS</b></h5>
+                            <hr>
                             <a class="nav-link ms-3 my-1" href="#resume-item-1">Education</a>
                             <a class="nav-link ms-3 my-1" href="#resume-item-2">Honors and Awards</a>
                             <a class="nav-link ms-3 my-1" href="#resume-item-3">Employment</a>
