--- a/art.html
+++ b/art.html
@@ -30,6 +30,8 @@
         </li>
       </ul>
 
+        <div class="justify-content-center"><img width="50%" src="https://www.dropbox.com/scl/fi/yhcp1zozlp7bihfv1w5lm/competition-piece-large.png?rlkey=bhfrsa40rovv9esv3b9abdqt8&raw=1"></div>
+
     <footer>
         <div id="bottomBar"></div>
     </footer>
