--- a/about.html
+++ b/about.html
@@ -21,7 +21,16 @@
     </header>
 
     <main>
-<div>about</div>
+<div class="flex-container">
+    <div class="flex-one-half">
+        <h5 class="d-inline-flex mb-3 px-2 py-1 justify-content-center text-black-50"><b>CURRENT</b></h5>
+        <br><i>MSc Health Data Science, University of New South Wales</i>
+        <br>Dissertation on data visualization and dashboard design for use by cancer clinicians.
+                            <hr></div>
+    <div class="flex-one-half">
+        <img src="https://www.dropbox.com/scl/fi/9d6rc7fl99mm78po1v7mj/mask.jpg?rlkey=nvgcbfkqgq9vgsfocslq8rzqn&raw=1">
+    </div>
+</div>
 </main>
 
     <footer>
