--- a/about.html
+++ b/about.html
@@ -27,9 +27,8 @@
         <br><i>MSc Health Data Science, University of New South Wales</i>
         <br>Dissertation on data visualization and dashboard design for use by cancer clinicians.
                             <hr></div>
-    <div class="flex-one-half">
-        <img src="https://www.dropbox.com/scl/fi/9d6rc7fl99mm78po1v7mj/mask.jpg?rlkey=nvgcbfkqgq9vgsfocslq8rzqn&raw=1">
-    </div>
+        <img class="flex-one-half" src="https://www.dropbox.com/scl/fi/9d6rc7fl99mm78po1v7mj/mask.jpg?rlkey=nvgcbfkqgq9vgsfocslq8rzqn&raw=1">
+    
 </div>
 </main>
 
