--- a/art.html
+++ b/art.html
@@ -30,7 +30,7 @@
         </li>
       </ul>
 
-        <div class="justify-content-center"><img width="25%" src="https://www.dropbox.com/scl/fi/drd8ot7q848160r4g6bns/competition-piece-small.png?rlkey=nb3m5vx1l0zt9hdbrfvg8tcho&raw=1"></div>
+        <img width="35%" class="justify-content-center" src="https://www.dropbox.com/scl/fi/drd8ot7q848160r4g6bns/competition-piece-small.png?rlkey=nb3m5vx1l0zt9hdbrfvg8tcho&raw=1">
 
     <footer>
         <div id="bottomBar"></div>
