--- a/headers.html
+++ b/headers.html
@@ -39,5 +39,5 @@
 
 <div id="footbar">
   <hr>
-  <p>© S.K. Art and Design, 2024</p>
+  <p>© S.K. Art and Design, 2024 | Powered by <a href="https://github.com/sk-etcher/portfolio">GitHub</a></p>
 </div>
