--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
                         <div class="flex-container">
                             <div class="flex-one-quarter">Current</div>
                             <div class="flex-three-quarters"><b>MSc Health Data Science</b>
-                                <br><i>University of New South Wales</i>
+                                <br><i class="badge text-bg-secondary">University of New South Wales</i>
                                 <br>Expected graduation in September 2024
                             </div>
                         </div>
@@ -74,7 +74,7 @@
                         <div class="flex-container">
                             <div class="flex-one-quarter">2018</div>
                             <div class="flex-three-quarters"><b>International Baccalaureate Diploma</b>
-                                <br><i>Canadian International School of Hong Kong</i>
+                                <br><i >Canadian International School of Hong Kong</i>
                                 <br>Score: 38
                             </div>
                         </div>
@@ -86,11 +86,76 @@
                             </div>
                         </div>
                         <h4 id="resume-item-3">Employment</h4>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2022</div>
+                            <div class="flex-three-quarters"><b>Receptionist and Administration Assistant</b>
+                                <br><i>The Paediatric Clinic at North Shore Private Hospital</i>
+                                <ul>
+                                    <li>Retrieved patient files from other practices and managed them on the specialist software Genie</li>
+                                    <li>Scheduled and organized appointments, being aware of the time commitments required for patients and clinicians alike</li>
+                                    <li>Arranged billing, Medicare, and other payments to and from the clinic</li>
+                                    <li>Greeted patients and their guardians at the clinic, ensuring a warm and welcoming environment</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2022</div>
+                            <div class="flex-three-quarters"><b>Animator</b>
+                                <br><i>The New Historia</i>
+                                <br>Score: 93%
+                            </div>
+                        </div>
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2018</div>
+                            <div class="flex-three-quarters"><b>Ontario Secondary School Diploma</b>
+                                <br><i>Canadian International School of Hong Kong</i>
+                                <br>Score: 93%
+                            </div>
+                        </div>
                         <h4 id="resume-item-4">Volunteering, Projects and Interests</h4>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2018</div>
+                            <div class="flex-three-quarters"><b>Ontario Secondary School Diploma</b>
+                                <br><i>Canadian International School of Hong Kong</i>
+                                <br>Score: 93%
+                            </div>
+                        </div>
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2018</div>
+                            <div class="flex-three-quarters"><b>Ontario Secondary School Diploma</b>
+                                <br><i>Canadian International School of Hong Kong</i>
+                                <br>Score: 93%
+                            </div>
+                        </div>
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2018</div>
+                            <div class="flex-three-quarters"><b>Ontario Secondary School Diploma</b>
+                                <br><i>Canadian International School of Hong Kong</i>
+                                <br>Score: 93%
+                            </div>
+                        </div>
                         <h4 id="resume-item-5">Skills</h4>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2018</div>
+                            <div class="flex-three-quarters"><b>Ontario Secondary School Diploma</b>
+                                <br><i>Canadian International School of Hong Kong</i>
+                                <br>Score: 93%
+                            </div>
+                        </div>
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2018</div>
+                            <div class="flex-three-quarters"><b>Ontario Secondary School Diploma</b>
+                                <br><i>Canadian International School of Hong Kong</i>
+                                <br>Score: 93%
+                            </div>
+                        </div>
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2018</div>
+                            <div class="flex-three-quarters"><b>Ontario Secondary School Diploma</b>
+                                <br><i>Canadian International School of Hong Kong</i>
+                                <br>Score: 93%
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
